gettext-macros/tests/ui/gettext/expected_comma.stderr
error: expected `,`
 --> tests/ui/gettext/expected_comma.rs:4:19
  |
4 |     gettext!("{}" 1);
  |                   ^
