gettext-macros/tests/ui/gettext/expected_comma.rs
use gettext_macros::*;

fn main() {
    gettext!("{}" 1);
}
